corrected margins and shifted logo background to the left 1 pixel on all buttons

--- a/packages/vanilla-components/src/components/copy-link-button/copy-link-button.scss
+++ b/packages/vanilla-components/src/components/copy-link-button/copy-link-button.scss
@@ -35,7 +35,6 @@ button.icon-btn.copy {
 sqh-copy-link-button {
   font-family: 'Lato', sans-serif;
   display: block;
-  margin-bottom: 10px;
 
   input {
     color: inherit;
