--- a/packages/vanilla-components/src/components/facebook-share-button/facebook-share-button.scss
+++ b/packages/vanilla-components/src/components/facebook-share-button/facebook-share-button.scss
@@ -36,7 +36,7 @@ sqh-facebook-share-button {
       bottom: -1px;
       background: rgba(255,255,255,0.18);
       content: '';
-      left: 0;
+      left: -1px;
       position: absolute;
       top: -1px;
       width: 40px;
